--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
   color: #333333 !important;
   height: 100%;
   font-size: 14px !important;
+  background-color: #F9F9F9 !important;
 }
 
 .text-xs {font-size: 10px;}
@@ -50,7 +51,7 @@ body {
 }
 
 .content {
-  padding-top: 80px;
+  padding-top: 74px;
   margin-bottom: 24px;
   height: auto;
   min-height: 100vh;
@@ -70,17 +71,17 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #ffffff;
   z-index: 9;
-  box-shadow: 0 0 8px #e2e2e2;
   padding: 10px 0;
+  background-color: #F9F9F9;
 }
 .navigator .btn-search {
   border-radius: 8px;
   border-top: 0;
   border-left: 0;
   border-bottom: 0;
-  background-color: #F1F1F1;
+  background-color: #FFFFFF;
+  border: solid 1px #D8D8D8;
 }
 .navigator .btn-search:hover, .navigator .btn-search:active, .navigator .btn-search:focus-visible {
   border-color: #F1F1F1 !important;
@@ -105,6 +106,7 @@ body {
   white-space: nowrap;
   font-size: 12px;
   color: #333333;
+  background-color: #FFFFFF;
   padding: 8px;
   border: solid 1px #D8D8D8;
   border-radius: 8px;
@@ -118,23 +120,24 @@ body {
 .merchant-result {
   position: relative;
   height: auto;
-  min-height: calc(100vh - 80px);
+  /* min-height: calc(100vh - 80px); */
 }
 .merchant-result .result-list {
   position: relative;
   z-index: 3;
   height: auto;
-  min-height: calc(100vh - 80px);
+  /* min-height: calc(100vh - 80px); */
 }
 .merchant-result .empty-state {
   position: absolute;
-  top: calc(50% - 40px);
-  transform: translateY(-50%);
+  top: 56px;
   font-size: 12px;
+  z-index: 3;
 }
 .merc-card {
   overflow: hidden;
-  height: 100%;
+  height: 100% !important;
+  background: transparent !important;
 }
 .merc-card img {
   border-radius: 12px;
@@ -207,6 +210,14 @@ body {
 }
 .city-list .city-list-item:last-child {
   border-bottom: 0;
+}
+
+.slick-slider .slick-arrow {
+  display: none !important;
+}
+.slick-slider .slick-dots li {
+  margin-left: 0;
+  margin-right: 0;
 }
 
 @media (max-width: 767px) {
