--- a/src/carousel.css
+++ b/src/carousel.css
@@ -1,8 +1,22 @@
 .slick-dots{
-  position: absolute;
-    bottom: 15px !important;
+  bottom: 10px !important;
 }
-
-.slick-dots li button:before{
-  font-size: 12px !important;
+.slick-slider .slick-arrow {
+  display: none !important;
+}
+.slick-slider .slick-dots li {
+  margin-left: 0;
+  margin-right: 0;
+}
+.slick-dots li button:before {
+  font-family: unset !important;
+  content: '' !important;
+  width: 10px !important;
+  height: 10px !important;
+  background-color: #E8E8E8;
+  opacity: 1 !important;
+  border-radius: 50%;
+}
+.slick-dots li.slick-active button::before {
+  background-color: #333333;
 }
